tests/should_succeed/printf.jou
cdecl printf(format: byte*, ...) -> int

def main() -> int:
    printf("Hello world\n")  # Output: Hello world
    printf("This is a number: %d\n", 123)  # Output: This is a number: 123
    s = "yo"
    printf("This is a string: %s\n", s)  # Output: This is a string: yo
    return 0
