tests/syntax_error/triple_equals.jou
cdecl puts(s: byte*) -> int

def main() -> int:
    if 1 === 2:  # Error: there is no '===' operator
        puts("hey")
    return 0
